# judo

./: .buildinfo  .gitignore  index.html  objects.inv  pyproject.toml  searchindex.js
.doctrees/: docs.doctree  environment.pickle  faq.doctree  index.doctree  quickstart.doctree
.doctrees/api/: index.doctree
.doctrees/api/judo/: index.doctree
.doctrees/api/judo/app/: index.doctree
.doctrees/api/judo/cli/: index.doctree
.doctrees/api/judo/config/: index.doctree
.doctrees/api/judo/controller/: index.doctree
.doctrees/api/judo/gui/: index.doctree
.doctrees/api/judo/optimizers/: index.doctree
.doctrees/api/judo/simulation/: index.doctree
.doctrees/api/judo/tasks/: index.doctree
.doctrees/api/judo/utils/: index.doctree
.doctrees/api/judo/visualizers/: index.doctree
.doctrees/interface/: config_registration.doctree  config_with_hydra.doctree  gui.doctree  index.doctree  intro.doctree  optimizers.doctree  overrides.doctree  tasks.doctree
.github/workflows/: pypi_publish.yml
_modules/: index.html
_modules/judo/app/benchmark/: index.html
_modules/judo/app/structs/: index.html
_modules/judo/app/utils/: index.html
_modules/judo/cli/: index.html
_modules/judo/config/: index.html
_modules/judo/controller/controller/: index.html
_modules/judo/controller/overrides/: index.html
_modules/judo/examples/example_optimizer/: index.html
_modules/judo/examples/example_task/: index.html
_modules/judo/gui/: index.html
_modules/judo/optimizers/: index.html
_modules/judo/optimizers/base/: index.html
_modules/judo/optimizers/cem/: index.html
_modules/judo/optimizers/mppi/: index.html
_modules/judo/optimizers/overrides/: index.html
_modules/judo/optimizers/ps/: index.html
_modules/judo/simulation/base/: index.html
_modules/judo/simulation/mj_simulation/: index.html
_modules/judo/tasks/: index.html
_modules/judo/tasks/base/: index.html
_modules/judo/tasks/caltech_leap_cube/: index.html
_modules/judo/tasks/cartpole/: index.html
_modules/judo/tasks/cost_functions/: index.html
_modules/judo/tasks/cylinder_push/: index.html
_modules/judo/tasks/fr3_pick/: index.html
_modules/judo/tasks/leap_cube/: index.html
_modules/judo/tasks/leap_cube_down/: index.html
_modules/judo/utils/assets/: index.html
_modules/judo/utils/fields/: index.html
_modules/judo/utils/math_utils/: index.html
_modules/judo/utils/mj_rollout_backend/: index.html
_modules/judo/utils/normalization/: index.html
_modules/judo/utils/policy_mj_rollout_backend/: index.html
_modules/judo/utils/rollout_backend/: index.html
_modules/judo/visualizers/model/: index.html
_modules/judo/visualizers/utils/: index.html
_modules/judo/visualizers/visualizer/: index.html
_sources/api/judo/controller/: index.rst.txt
_sources/api/judo/gui/: index.rst.txt
_sources/api/judo/simulation/: index.rst.txt
_sources/api/judo/tasks/: index.rst.txt
_sources/api/judo/utils/: index.rst.txt
api/: index.html
api/judo/: index.html
api/judo/app/: index.html
api/judo/app/benchmark/: index.html
api/judo/app/structs/: index.html
api/judo/app/utils/: index.html
api/judo/cli/: index.html
api/judo/config/: index.html
api/judo/controller/: index.html
api/judo/gui/: index.html
api/judo/optimizers/: index.html
api/judo/simulation/: index.html
api/judo/tasks/: index.html
api/judo/utils/: index.html
api/judo/visualizers/: index.html
configs/: cylinder_push.json  spot_tire_upright.json
dev/: load_model.py
docs/: architecture_diagram.py  index.html
example/: warp_test.py
faq/: index.html
genindex/: index.html
interface/: index.html
interface/config_registration/: index.html
interface/config_with_hydra/: index.html
interface/gui/: index.html
interface/intro/: index.html
interface/optimizers/: index.html
interface/overrides/: index.html
interface/tasks/: index.html
judo/: gui.py
judo/configs/: judo_default.yaml
judo/controller/: SPOT_HIERARCHICAL_CONTROL.md  __init__.py  batched_spot_locomotion.py  controller.py  mj_controllers.py  overrides.py  spot_constants.py  spot_locomotion.py
judo/models/policies/: spot_locomotion.pt
judo/models/xml/: cylinder_push.xml
judo/optimizers/: SKILL_POLICY_README.md  __init__.py  base.py  cem.py  overrides.py  skill_policy.py
judo/simulation/: base.py  policy_mj_simulation.py
judo/tasks/: __init__.py  base.py  caltech_leap_cube.py  cartpole.py  cylinder_push.py  fr3_pick.py  leap_cube.py  leap_cube_down.py  spot_door_box.py
judo/tasks/spot/: __init__.py  spot_barbell.py  spot_barrier_drag.py  spot_barrier_upright.py  spot_base.py  spot_box.py  spot_box_push.py  spot_chair_push.py  spot_cone_push.py  spot_constants.py  spot_crowd_barrier.py  spot_navigate.py  spot_rack_push.py  spot_rugged_box_push.py  spot_table_drag.py  spot_table_short.py  spot_tire_push.py  spot_tire_rack_drag.py  spot_tire_roll.py  spot_tire_stack.py  spot_tire_upright.py  spot_traffic_cone.py  spot_utils.py  spot_yellow_chair.py  spot_yellow_chair_ramp.py
judo/tasks/spot_baseline/: __init__.py  spot_base.py  spot_box.py  spot_box_push.py  spot_chair_push.py  spot_cone_push.py  spot_locomotion.py  spot_rack_push.py  spot_tire_push.py
judo/utils/: hierarchical_rollout_backend.py.bak  indexing.py  math_utils.py  mj_simulator_llc.py  mjwarp_rollout_backend.py  mujoco_warp.py  policy_mj_rollout_backend.py  rollout_backend.py  timer.py
judo/visualizers/: model.py
mujoco_extensions/: __init__.py
mujoco_extensions/onnx_interface/: onnx_interface.cpp
mujoco_extensions/system/: system_class.cpp
py-modindex/: index.html
quickstart/: index.html
run_mpc/: main.py  mpc_batch.py  mpc_config.py  mpc_setup.py  old_run_mpc.py  old_visualize_mpc.py  run_mpc.py  visualize_trajectories.py
run_mpc/configs/: spot_tire_upright.json
scripts/: benchmark_sampling.py  benchmark_skill_policy.py  benchmark_skill_policy_example.py  performance_benchmark.py  run_mpc.py  visualize_trajectories.py
scripts/skill_policies/: best_skill_policy (1).onnx
search/: index.html
tests/: test_spot_tasks.py
(+157 files in other folders)
